welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  
  var C = new Array[Color](getMondeHauteur())
  for( i<-0 to C.lenght-1 )
  {
    C(i) = getCouleurSol()
    avance()
  }
  for(i<-1 to getMondeLargeur()-1)
  {
    init()
    write(C)
  }
  
}



def paint() {
  baisseBrosse()
  leveBrosse()
}

def write(C:Array[Color]) = {
  for(i <- C )
  {
    setBrosseCouleur(i)
    paint()
    avance()
  }  
}

def init() {
  gauche()
  avance()
  droite()
}